--- a/numpy_pandas_visualization_practice.ipynb
+++ b/numpy_pandas_visualization_practice.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "eb7cf4c3",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,8 @@
    "source": [
     "print(data.info)\n",
     "print(data.describe)\n",
-    "print(data.head)\n"
+    "print(data.head)\n",
+    "\n"
    ]
   },
   {
