--- a/evaluation techniques.ipynb
+++ b/evaluation techniques.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4d99d48e",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
     "plt.xlabel(\"Predicted\")\n",
     "plt.ylabel(\"Actual\")\n",
     "plt.title(\"confusion matrix\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
